# echomind-commerce

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION_NOTE.md  DEMO_RECORDING_SCRIPT.md  LICENSE  Makefile  Makefile.help  PRODUCT_DOCUMENT.md  README.md  SECURITY.md  TECHNICAL_DOCUMENT.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  auth_deps.py  auth_middleware.py  ownership.py  schemas.py
backend/api/endpoints/: __init__.py  audit.py  auth.py  debug.py  diagnose.py  fix.py  graph.py  interview.py  onboard.py  public_audit.py  simulate.py
backend/config/: __init__.py  prompts.py  settings.py
backend/core/: __init__.py
backend/core/agents/: __init__.py  openrouter.py  prompt_gen.py  runner.py
backend/core/contradiction/: __init__.py
backend/core/diagnose/: __init__.py  calibrator.py  cypher_diff.py  entity_resolver.py  judge.py  ranker.py  revenue_model.py
backend/core/fix/: __init__.py  copy_generator.py  retest_orchestrator.py  shopify_writer.py
backend/core/socratic/: __init__.py  extractor.py  frontier_scorer.py  phase_manager.py  question_gen.py  redundancy_checker.py
backend/graph/: __init__.py  embeddings.py  neo4j_client.py  operations.py  queries.py  schema.py
backend/services/: __init__.py  audio_service.py  firebase_service.py  llm_service.py  shopify_service.py  stt_service.py
backend/tests/: conftest.py  test_calibration.py  test_ownership.py  test_schemas.py
backend/utils/: logging_safety.py
(+57 files in other folders)
