[project]
name = "echomind-commerce-backend"
version = "0.1.0"
description = "Echomind Commerce - AI Representation Optimizer backend (FastAPI + Neo4j + Gemini)"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "Proprietary - Hackathon submission" }
authors = [
    { name = "Echomind Commerce Team" },
]

dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.30.*",
    "websockets==13.*",
    "pydantic==2.9.*",
    "pydantic-settings==2.5.*",
    "neo4j==5.25.*",
    "google-generativeai==0.8.*",
    "google-cloud-speech==2.27.*",
    "openai>=1.50",
    "firebase-admin==6.6.*",
    "httpx==0.27.*",
    "numpy==2.1.*",
    "tenacity==9.*",
    "python-dotenv==1.*",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "graph*", "services*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
